# anguilla

./: .appveyor.yml  .clang-tidy  .coveragerc  .deepsource.toml  .devcontainer.json  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  REFERENCES  ci-environment.yml  environment.yml  mypy.ini  pyproject.toml  setup.py  sonar-project.properties
.devcontainer/: Dockerfile  cmake-find-blis.patch  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-conda.yml  build-pip.yml  build-wheels.yml  sonar.yml  wheels.yml
anguilla/: __init__.py  dominance.py  evaluation.py  indicators.py  selection.py  util.py
anguilla/archive/: __init__.py
anguilla/cxx/: CMakeLists.txt
anguilla/cxx/archive/: CMakeLists.txt
anguilla/cxx/archive/include/anguilla/archive/: archive.hpp  archive_kd.hpp  individual.hpp  parameters.hpp  statistics.hpp
anguilla/cxx/archive/include/anguilla/upmo/: archive.hpp  archive_kd.hpp  individual.hpp  parameters.hpp  statistics.hpp
anguilla/cxx/archive/src/: _archive.cpp
anguilla/cxx/btree/include/btree/: btree.h  map.h  set.h
anguilla/cxx/common/include/anguilla/common/: common.hpp
anguilla/cxx/dominance/: CMakeLists.txt
anguilla/cxx/dominance/include/anguilla/dominance/: dominance.hpp  nondominated_set.hpp  nondominated_set_2d.hpp
anguilla/cxx/dominance/src/: _dominance.cpp
anguilla/cxx/hypervolume/: CMakeLists.txt
anguilla/cxx/hypervolume/include/: common.hpp  hv2d.hpp  hv3d.hpp  hvc2d.hpp  hvc3d.hpp
anguilla/cxx/hypervolume/include/anguilla/hypervolume/: hv2d.hpp  hv3d.hpp  hvc2d.hpp  hvc2d_ng.hpp  hvc3d.hpp
anguilla/cxx/hypervolume/include/anguilla/hypervolume/ng/: hvc_3d.hpp
anguilla/cxx/hypervolume/src/: _hypervolume.cpp
anguilla/cxx/include/anguilla/archive/upmo/: archive.hpp  archive_kd.hpp  individual.hpp  parameters.hpp  statistics.hpp
anguilla/cxx/include/anguilla/common/: common.hpp  pyshark.hpp
anguilla/cxx/include/anguilla/dominance/: dominance.hpp  nondominated_set_2d.hpp
anguilla/cxx/include/anguilla/hypervolume/: hv2d.hpp  hv3d.hpp  hvc2d.hpp  hvc3d.hpp  hvkd.hpp  hypervolume.hpp
anguilla/cxx/include/anguilla/optimizers/: individual.hpp  mocma.hpp  selection.hpp
anguilla/cxx/shark_hypervolume/: CMakeLists.txt
anguilla/cxx/shark_hypervolume/include/: pyshark.hpp
anguilla/cxx/shark_hypervolume/src/: _shark_hypervolume.cpp
anguilla/cxx/src/: _archive.cpp  _dominance.cpp  _hypervolume.cpp  _optimizers.cpp  _shark_hypervolume.cpp
anguilla/dominance/: __init__.py
anguilla/ds/: __init__.py  rbtree.py
anguilla/fitness/: __init__.py  base.py  benchmark.py  constraints.py  evaluators.py
anguilla/fitness/benchmark/: __init__.py  cigtab.py  dtlz.py  elli.py  ellipsoid.py  fon.py  ihr.py  moq.py  rastrigin.py  sphere.py  sum_squares.py  zdt.py
anguilla/hypervolume/: __init__.py  approx.py  exact.py
anguilla/optimizers/: __init__.py  base.py  cma.py  mocma.py  oplcma.py  upmocma.py
cmake/toolchains/: clang-cxx14-libstdcxx.cmake  clang-cxx17-libstdcxx.cmake  clang-cxx20-libcxx.cmake  clang-cxx20-libstdcxx.cmake  cxx17.cmake
conda-recipes/anguilla/: bld.bat  build.sh  meta.yaml
conda-recipes/shark/: bld.bat  build.sh  meta.yaml
conda-recipes/shark/toolchains/: clang-cxx11-libstdcxx.cmake  cxx11.cmake
docs/: Makefile  conf.py  development.rst  index.rst  notes.rst  quickstart.rst  references.bib  references.rst  requirements.txt  robots.txt
docs/extra/: external-parameters-cma.tgn  external-parameters-mocma.tgn  internal-parameters-cma.tgn  internal-parameters-mocma.tgn
misc/shark-recipe/: bld.bat  build.sh  meta.yaml
notebooks/: Makefile  hv_tmp.ipynb
notebooks/comparisons/: CMakeLists.txt  hv.py  hypervolume.ipynb
notebooks/comparisons/include/: pyshark.h
notebooks/comparisons/src/: hv.cpp  hv_comparison.cpp
notebooks/evaluation/: comparisons.template.html  dtlz_3d-5.ipynb  dtlz_3d.ipynb  fn_page.tex  fn_pages.ipynb  hvi-comparisons.template.html  plot_hypervolumes.ipynb  plot_hypervolumes_2.ipynb  plot_populations.ipynb  plot_step_sizes.ipynb  statistical_experiments.ipynb
notebooks/examples/: cma_simple.ipynb
notebooks/experiments/hypervolume/: hv_benchmark.ipynb
notebooks/experiments/mocma/: cigtab.ipynb  dtlz.ipynb  elli.ipynb  experiment.ipynb  experiment.py  ihr.ipynb  logs.ipynb  moq.ipynb  progression.ipynb  walkthrough.ipynb  zdt.ipynb
notebooks/experiments/opl_cmaes/: experiment.ipynb  experiment.py
notebooks/experiments/random_matrices/: experiment.ipynb
notebooks/experiments/selection/: debug.ipynb  debug2.ipynb
notebooks/experiments/upmocma/: walkthrough.ipynb
notebooks/prototypes/: benchmark_functions.ipynb  cmaes.ipynb  exp_norm_chi.ipynb  exp_norm_chi_cpp.ipynb  hv_contrib_3d.ipynb  hv_indicator_2d.ipynb  mocmaes.ipynb  multivariate_normal.ipynb  non_dominated_sorting.ipynb  random_matrices.ipynb  two_level_sort.ipynb
notebooks/shark/: cma_simple.ipynb  cqbo_output.txt
notebooks/shark/exploration/: CMakeLists.txt
notebooks/shark/exploration/include/matplotlibcpp/: matplotlibcpp.h
notebooks/shark/exploration/include/moq/: benchmarks.h
notebooks/shark/exploration/src/: experiment1.cpp  experiment2.cpp  fitness.cpp  mocma.cpp
notebooks/shark/exploration/src/moq/: benchmarks.cpp  experiments.cpp
requirements/: base.txt  ci-test.txt  devcontainer.txt  development.txt  documentation.txt
tests/: test_archive.py  test_cma.py  test_constraints.py  test_dominance.py  test_evaluation.py  test_fitness.py  test_hypervolume.py  test_mocma.py  test_oplcma.py  test_optimizers.py  test_selection.py  test_upmocma.py  test_util.py
tests/data/contributions/: CLIFF3D_1_IN.csv  CLIFF3D_1_OUT.csv  SHARK_2D_IN.csv  SHARK_2D_OUT.csv  SHARK_3D_IN.csv  SHARK_3D_OUT.csv
tests/data/fitness/: CIGTAB1.csv  CIGTAB2.csv  DTLZ1.csv  DTLZ2.csv  DTLZ3.csv  DTLZ4.csv  DTLZ5.csv  DTLZ6.csv  DTLZ7.csv  ELLI1.csv  ELLI2.csv  Ellipsoid.csv  FON.csv  IHR1.csv  IHR2.csv  IHR3.csv  IHR4.csv  IHR6.csv  Rastrigin.csv  Sphere.csv  ZDT1.csv  ZDT2.csv  ZDT3.csv  ZDT4.csv  ZDT6.csv
(+7 files in other folders)
