# PEP-518 (https://www.python.org/dev/peps/pep-0518/)
# See also: https://snarky.ca/what-the-heck-is-pyproject-toml/

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.2",
    "cmake>=3.18",
    "ninja",
    "scikit-build",
    "numpy>=1.19.4",
]

build-backend = "setuptools.build_meta"

# See: https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
source = ['anguilla']
branch = true
relative_files = true

# See: https://nbqa.readthedocs.io/en/latest/configuration.html
[tool.nbqa.mutate]
isort = true
pylint = true
pyupgrade = true

[tool.nbqa.addopts]
pyupgrade = ["--py36-plus"]

[tool.nbqa.config]
mypy = "../mypy.ini"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

